<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hunain.emergencyapplication.PasswordActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">


<ImageView
    android:layout_width="16dp"
    android:layout_height="16dp"
    android:contentDescription="@string/backicon"
    android:src="@drawable/back"
    android:layout_margin="16dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_margin="16dp"
        android:text="@string/WelcomeBack"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/SignInWithYourPassword"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:passwordToggleEnabled="true"

        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleTint="@color/ButtonColor"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getPassword"
            android:background="@drawable/buttonshapes"

            android:text="@string/submit"
            android:textColor="@color/FontColor" />

    </LinearLayout>



</LinearLayout>
