<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hunain.emergencyapplication.MainActivity">


    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="300dp"
        android:layout_height="300dp"


        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="38dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        android:scaleType="fitXY"
        android:src="@drawable/firedepartment" />



    <TextView
        android:id="@+id/welcomeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/imageButton"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="16dp"
        android:text="@string/welcome"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_below="@+id/welcomeTxtView"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/welcomeTextView2"
        />
    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/buttonshapes"
        android:text="@string/Continue"
        android:textColor="@color/FontColor"
        android:layout_margin="16dp"/>
</RelativeLayout>
