<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentRelativeLayout">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dpanel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/cancelBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@color/FontColor"
        android:visibility="gone">

        <ImageView
            android:id="@+id/userPic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/sampleuser" />

        <TextView
            android:id="@+id/driverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userPic"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:layout_toEndOf="@+id/userPic"
            android:layout_toRightOf="@+id/userPic"
            android:text="@string/driverName" />

        <TextView
            android:id="@+id/driverPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/driverName"
            android:layout_alignStart="@+id/driverName"
            android:layout_centerVertical="true"
            android:text="@string/DriverPhoneNumber" />

        <TextView
            android:id="@+id/driverDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/driverName"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@+id/driverPhoneNumber"
            android:layout_toRightOf="@+id/driverPhoneNumber"
            android:text="@string/Department" />

        <TextView
            android:id="@+id/branchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/driverPhoneNumber"
            android:layout_alignLeft="@+id/driverDepartment"
            android:layout_alignStart="@+id/driverDepartment"
            android:text="@string/branchName" />


    </RelativeLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="book"
        android:background="@color/ButtonColor"
        android:layout_alignParentBottom="true"
        android:text="@string/Call"
        android:textColor="@color/FontColor" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ButtonColor"
        android:onClick="cancelProblem"
        android:text="@string/cancel"
        android:textColor="@color/FontColor"
        android:visibility="gone" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:onClick="logout"
        android:text="@string/logout" />
</RelativeLayout>