<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customDriverPanel"
    android:background="#FFFF">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/sampleuser"
        android:layout_margin="16dp"
        android:id="@+id/imageView"
        />

    <TextView
        android:id="@+id/DName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/driverName" />

    <TextView
        android:id="@+id/Department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/Department" />

    <TextView
        android:id="@+id/BranchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Department"
        android:layout_alignBottom="@+id/Department"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_toEndOf="@+id/Department"
        android:layout_toRightOf="@+id/Department"
        android:text="@string/branchName" />

    <TextView
        android:id="@+id/PhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BranchName"
        android:layout_alignStart="@+id/BranchName"
        android:layout_alignTop="@+id/DName"
        android:text="@string/PhoneNumber" />


</RelativeLayout>