<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hunain.emergencyapplication.UserData"
    >

    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/firstNameInputLayout"
        android:layout_margin="16dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="#000"
        >

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userFirstName"
        android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/firstNameInputLayout"
        android:id="@+id/lastNameInputLayout"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="#000">

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastName"
            android:inputType="text"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/lastNameInputLayout"
        android:id="@+id/emailInputLayout"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="#000">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            android:inputType="text"/>



    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:passwordToggleEnabled="true"

        android:layout_below="@id/emailInputLayout"
        android:id="@+id/passwordInputLayout"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleTint="@color/ButtonColor"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/passwordInput"
            android:inputType="textPassword"
          />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/passwordInputLayout"
        android:id="@+id/confirmPasswordLayout"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleTint="@color/ButtonColor"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"

            android:id="@+id/confirmPassword"
            android:inputType="textPassword"
           />
    </android.support.design.widget.TextInputLayout>




    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/buttonshapes"
        android:text="@string/register"
        android:onClick="getData"
        android:textColor="@color/FontColor" />


</RelativeLayout>
