<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hunain.emergencyapplication.LoginActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"

        android:text="@string/inputMobileNumber" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputSignIn"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp" >


        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_textSize="16dp"

            />

        <EditText
            android:id="@+id/editText_carrierNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="phone"
            android:textSize="16dp"
            android:inputType="phone"
            android:singleLine="true" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/horizontalProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/buttonshapes"

        >

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/buttonshapes"
            android:textColor="@color/FontColor"
            android:elevation="1dp"
            android:onClick="login"
            android:text="@string/Continue" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/loginBtn"
            android:layout_alignTop="@+id/loginBtn"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:background="#000"
            android:indeterminate="true"

            android:visibility="visible" />
    </RelativeLayout>


</LinearLayout>
